--- a/html/css/style.css
+++ b/html/css/style.css
@@ -2,17 +2,27 @@
 	Create container page
 *------------------------------------*/
 .row.apple-324 {
-    justify-content: center;
-    padding-top: 5em;
-    padding-bottom: 6em;
-  }
+  justify-content: center;
+  padding-top: 5em;
+  padding-bottom: 6em;
+}
   
-  button.btn-apple-324 {
-    color: #fff;
-    background: #000;border: none;
-  }
-  button.btn-apple-324:hover {
-    background: #e9e9e9;
-    border: 1px solid black;
-    color: #000;
-  }
+button.btn-apple-324 {
+  color: #fff;
+  background: #000;border: none;
+}
+button.btn-apple-324:hover {
+  background: #e9e9e9;
+  border: 1px solid black;
+  color: #000;
+}
+
+button.btn-mango-324 {
+  width: 100%;
+  border: none;
+  padding: .5rem 0;
+  text-align: center
+}
+button.btn-mango-324:hover {
+  border: 1px solid black;
+}
